# cherry-v

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: file_parser.cpp.7BB2474131D591F3.idx  file_parser.hpp.7A26C5EFCDDB959B.idx  main.cpp.7538FEAA74BDAD62.idx  tables.hpp.D9C508C35C5BC979.idx
include/: file_parser.hpp  tables.hpp
src/: file_parser.cpp
test/: test_error.rsv  test_io.rsv
